syntax = "proto3";

package auth.v1;

option go_package = "github.com/company/auth-proxy/api/gen/auth/v1;authv1";

service AuthService {
  rpc SignUp(SignUpRequest) returns (AuthResponse);
  rpc SignIn(SignInRequest) returns (AuthResponse);
  rpc SignInWithGoogle(OAuthRequest) returns (AuthResponse);
  rpc SignInWithApple(OAuthRequest) returns (AuthResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (AuthResponse);
  rpc Logout(LogoutRequest) returns (LogoutResponse);
}

service HealthService {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}

message SignUpRequest {
  string email = 1;
  string password = 2;     // min 8 chars
  AttestationData attestation = 10;
}

message SignInRequest {
  string email = 1;
  string password = 2;
  AttestationData attestation = 10;
}

message OAuthRequest {
  string id_token = 1;
  string nonce = 2;
  AttestationData attestation = 10;
}

message RefreshTokenRequest {
  string refresh_token = 1;
  AttestationData attestation = 10;
}

message LogoutRequest {
  string access_token = 1;
}

message AuthResponse {
  string access_token = 1;
  string token_type = 2;   // always "bearer"
  int32 expires_in = 3;
  string refresh_token = 4;
  User user = 5;
}

message LogoutResponse {
  string message = 1;
}

message User {
  string id = 1;
  string email = 2;
  string created_at = 3;
}

message AttestationData {
  Platform platform = 1;
  string token = 2;
  string key_id = 3;       // iOS only
  string challenge = 4;
}

enum Platform {
  PLATFORM_UNSPECIFIED = 0;
  PLATFORM_IOS = 1;
  PLATFORM_ANDROID = 2;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  ServingStatus status = 1;
}

enum ServingStatus {
  SERVING_STATUS_UNSPECIFIED = 0;
  SERVING_STATUS_SERVING = 1;
  SERVING_STATUS_NOT_SERVING = 2;
}
